# fdsf-research

./: .gitignore  CMakeLists.txt  LICENSE  OpenFFD.sln  README.md  build.sh
OpenFFD/: BasicTypes.h  FDSFInteger.cpp  FDSFInteger.h  OpenFFD.sln  OpenFFD.vcxproj  OpenFFD.vcxproj.filters
OpenFFD/include/: FDSFHalf.h  FDSFInteger.h  Newton.h  definitions.h  excess_power_convergence.h
OpenFFD/src/: FDSFHalf.cpp  FDSFInteger.cpp  Newton.cpp  difference_scheme.cpp  difference_scheme.h  excess_power_convergence.cpp  matrix_helper.cpp  matrix_helper.h  mesh_collection.cpp  mesh_collection.h
OpenFFD_Tests/: OpenFFD_Tests.vcxproj  stdafx.cpp  unittest1.cpp
include/: BasicService.h  BasicTypes.h
matlab/: check.m  check_trapz.m  forPlotONQuad.m  test.prj
matlab/AlgorithmPrecesionCalculationY/: Ik1_with_all_updates.m  PrecesionY.m
matlab/Bernulli/: dependency.m
matlab/HalfIndex/3pow/: check_k12.m  check_k32.asv  check_k32.m  check_k52.asv  check_k52.m  check_k72.asv  check_k72.m  check_k_m12.m  check_k_m32.m
matlab/HalfIndex/6pow/: approximate.m  k12.m  k32.m  k52.m  k72.m  k_m12.m  k_m32.m
matlab/HalfIndex/6pow_varying_2_coeff/: FFD_half.m  NewtonsMethod.m  k12.m  k32.m  k52.m  k72.m  k_m12.m  trapz.m
matlab/HalfIndex/6pow_varying_3_coeff/: k12.m  k32.m  k52.m  k72.m  k_m12.m
matlab/autoGridShift/exp_x/: approxPolinom.m  data.txt  rationalApprox.m  shiftGridAccurate.m  test_polynom.m
matlab/autoGridShift/fd-half/: fd_p12_rat_app_no_recalc_every_iteration
matlab/autoGridShift/u=0/: approxPolinom.m  ekstremList.m  first_it_X.mat  first_it_ekstr.mat  first_it_profile.mat  last_it_X.mat  last_it_profile.mat  plots.m  shiftGridAccurate.m  test_polynom.m
matlab/checkCodyThatcher/: R1.m  R2.m  R3.m  checkApproximationForms.m  plotApproximationForms.m
matlab/checkGlobalAppFromArticle/: AllK_on_1_graphic.m  ForEachXdifferentTmax.m  checkCutCoeffK4.m  checkGlobApproximFirstFormula.m  check_I0.m  plotRefineMesh.m  testCheckTmax.m
matlab/checkGlobalAppFromArticle/1variant/: 1.docx  check_k1.m  check_k2.m  check_k3.m  check_k4.m
matlab/checkGlobalAppFromArticle/6pow/: approximate.m  check_bernulli.m  check_dzeta.m  k1.m  k2.m  k3.m  k4.m
matlab/checkGlobalAppFromArticle/6pow_try_get_more_precesion/: k1.m  k2.m  k3.m  k4.m
matlab/checkGlobalAppFromArticle/6pow_varying_3_coeff/: k1.m  k2.m  k3.m  k4.m
matlab/checkGlobalAppFromArticle/simpleGlobalApprox/: SimleForrmula_k1.m  SimleForrmula_k2.m  SimleForrmula_k3.m  SimleForrmula_k4.m
matlab/checkGlobalApproximForInt/: checkRightExpansion.m  checkSimpleClobalApprox.m  checkWithSecondOrder.m
matlab/checkPositiveValue/: checkPositivePrecesion.m  checkPositivePrecesionGK.m  checkPositivePrecesionGKwithChangeVariable.m
matlab/exponentialConvergence/: I_12.m  I_32.m  I_m12.m  final_plot.m  final_plot_n1.m  final_plot_n2.m  plot_article_dan.m  plot_cos.m  plot_demo.m  plot_demo_a0_1.m  plot_demo_a0_5.m  plot_demo_a1_1.m  plot_exp_cos.m  richardson.py
matlab/precisionApproximations/: d2I_k12.txt  d2I_k32.txt  d2I_k52.txt  d2I_k72.txt  d2I_km12.txt  d2I_km32.txt  quality_view.m  quality_view_right.m
matlab/preprint2/: fd_poles.m
matlab/preprint2/asimptoticExpansion/: N_estimation.m
msvc14/: OpenFFD.sln  OpenFFD.vcxproj  OpenFFD.vcxproj.filters  Test.vcxproj  Test.vcxproj.filters  fdsf-research.sln  fdsf-research.vcxproj  fdsf-research.vcxproj.filters  testOpenFFD.vcxproj  testOpenFFD.vcxproj.filters
src/: AsymptoticSeries.cpp  BasicService.cpp  ExponentialConvergence.cpp  FDSFHalf.cpp  FDSFInteger.cpp  Grid.cpp  IntegralFDSF.cpp  MatrixUtils.cpp  Newton.cpp  SeriesLogNDivSqrN.cpp  Test.cpp  TestFDHalfIndex.cpp  TestFDIntegerIndex.cpp  TestMatrix.cpp  Utils.cpp  build.sh  fdsf-research.sln  main.cpp  matrix_helper.cpp  unit-fd-half-integer.cpp  unit-matrixes.cpp  unit.cpp
src/Utils/: CMakeLists.txt  build.sh
src/Utils/include/: JsonFields.h
src/Utils/msvc14/: Utils.vcxproj  Utils.vcxproj.filters
src/Utils/src/: Common.cpp  Common.h  Enter.cpp  Enter.h  FileSys.h  FileSystem.cpp  MatrixUtils.h  Print.cpp  Print.h
src/Utils/test/: CMakeLists.txt
src/Utils/test/src/: unit-filesys.cpp  unit-matrixes.cpp
src/exp-conv/: CMakeLists.txt  ExponentialConvergence.cpp  FDSFHalf-legacy.cpp  FDSFInteger-legacy.cpp  Fdsf-legacy.h  example-exponent-convergence.cpp
src/exp-conv/msvc14/: example-exp-conv.vcxproj  example-exp-conv.vcxproj.filters
src/fd-Jmhalf/: CMakeLists.txt  build.py  Графическое решение системы (43)
src/fd-half/: CMakeLists.txt  build.py  range.json
src/fd-half/src/: example-assympt-value.cpp  example-asym-series-calculate.cpp  example-calclulate-fd-half.cpp  example-chebyshev-grid.cpp  example-fcs-calculate.cpp  example-half-integer-quadratures.cpp  example-shift-grid.cpp  test-auto-grid-shift.cpp  test-calc-asymp-coefficients.cpp  test-calc-fcs-coefficients.cpp  test-check-accuracy.cpp  test-coefficients.cpp  test-prec-approx.cpp  util-calc-fd.cpp  обоснование.txt
src/fd-integer/: CMakeLists.txt
src/fdsf/: CMakeLists.txt  build.sh
src/fdsf/test/: CMakeLists.txt
src/fdsf/test/src/: Common.cpp  Common.h  unit-constants.cpp  unit-fd-half-integer.cpp  unit-fd-integer.cpp  unit-gamma.cpp  unit-richardson.cpp  unit-trapz.cpp  unit.cpp
src/high-precision/: Tables.h
src/include/: AsymptoticSeries.h  BasicService.h  BasicTypes.h  Constants.h  ExponentialConvergence.h  FDSFHalf.h  FDSFInteger.h  Fdsf.h  Gamma.h  Grid.h  Logger.h  MatrixUtils.h  Newton.h  SeriesLogNDivSqrN.h  TestCommon.h  definitions.h  excess_power_convergence.h  matrix_helper.h
test/: CMakeLists.txt  build.bat
test/src/: Common.cpp  Enter.cpp  Print.cpp  example-assympt-value.cpp  example-chebyshev-grid.cpp  example-exponent-convergence.cpp  example-half-integer-quadratures.cpp  example-shift-grid.cpp  test-calc-dzeta.cpp  test-coefficients.cpp  unit-constants.cpp  unit-exponent-convergence.cpp  unit-fd-half-integer.cpp  unit-fd-integer.cpp  unit-filesys.cpp  unit-matrixes.cpp  unit.cpp  util-calc-precision-fd.cpp  util-multiply.cpp
test/src/include/: Common.h  Print.h
testOpenFFD/: test.cpp  testOpenFFD.vcxproj
(+586 files in other folders)
